--- a/package.json
+++ b/package.json
@@ -13,9 +13,31 @@
   },
   "main": "background.js",
   "dependencies": {
+    "apexcharts": "^3.10.0",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
+    "css-loader": "^3.2.0",
+    "d3": "^5.12.0",
+    "debug": "^4.1.1",
+    "highcharts": "^7.2.0",
+    "highcharts-border-radius": "0.0.2",
+    "highcharts-vue": "^1.3.5",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "url-loader": "^2.1.0",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.5.0",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-carousel": "^0.18.0",
+    "vue-chartjs": "^3.4.2",
+    "vue-loader": "^15.7.1",
     "vue-router": "^3.0.3",
+    "vue-slick": "^1.1.15",
+    "vue-svg-gauge": "^1.2.1",
+    "vue2-d3": "^1.0.0",
+    "vue2-highcharts": "^1.2.5",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
